# django-occupation

./: .ackrc  .coveragerc  .hgignore  .pre-commit-config.yaml  MANIFEST.in  bitbucket-pipelines.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
docs/: Makefile  django_settings.py  requirements.txt
docs/source/: _badges.rst  conf.py  index.rst
docs/source/code/: occupation.admin.rst  occupation.apps.rst  occupation.base.rst  occupation.context_processors.rst  occupation.exceptions.rst  occupation.management.commands.loaddata.rst  occupation.management.commands.rst  occupation.management.rst  occupation.middleware.rst  occupation.migrations.0001_initial.rst  occupation.migrations.0002_tenant_users.rst  occupation.migrations.rst  occupation.models.rst  occupation.operations.rst  occupation.rst  occupation.settings.rst  occupation.signals.rst  occupation.utils.rst
examples/school/: Pipfile  pyproject.toml
examples/school/project/project/: settings.py
examples/school/project/school/: admin.py  apps.py  models.py  tests.py
examples/school/project/school/fixtures/: hamilton.json  naracoorte_hs.json  schools.json  user.json
examples/school/project/school/migrations/: 0001_initial.py  0002_result.py
occupation/: __init__.py  admin.py  apps.py  exceptions.py  middleware.py  models.py  operations.py  settings.py  signals.py  utils.py
occupation/management/commands/: loaddata.py
occupation/migrations/: 0001_initial.py  0002_tenant_users.py
occupation/templates/admin/: change-tenant.html
src/occupation/: __init__.py  admin.py  apps.py  base.py  context_processors.py  middleware.py  models.py  operations.py  settings.py  signals.py  utils.py
src/occupation/management/commands/: loaddata.py
src/occupation/migrations/: 0001_initial.py  0002_tenant_users.py  0003_patch_admin.py
src/occupation/templates/admin/: base.html
src/occupation/templates/occupation/: change_tenant.html
src/occupation/templatetags/: occupation.py
tests/: admin.py  models.py  settings.py  urls.py
tests/fixtures/: aware.json  aware_plus_schemata.json  naive.json  schemata.json
tests/migrations/: 0001_initial.py
tests/tests/: base.py  test_admin.py  test_clone_schema_db_function.py  test_context_processor.py  test_contrib_demo.py  test_contrib_groups.py  test_contrib_template.py  test_management_commands.py  test_middleware.py  test_migrations.py  test_multi_schema_manager.py  test_multiple_clients.py  test_object_equality.py  test_objects_are_partitioned.py  test_schema_creation.py  test_schema_model.py  test_settings.py  test_settings_models.py  test_signals.py  test_sql.py  test_swappable_model.py  test_template_tag.py  test_templates.py  test_user_schemata.py  test_utility_functions.py  utils.py
