[tool.poetry]
name = "django-occupation"
version = "0.1.0"
description = "Multitenancy support in django, via Row Level Security."
authors = ["Matthew Schinckel <matt@schinckel.net>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
psycopg2-binary = "*"
pytz = "*"

[tool.poetry.dev-dependencies]
hypothesis = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E501,E128"
max-line-length=119

[tool.isort]
combine_as_imports= true
forced_to_top= "occupation,django"
include_trailing_comma= true
known_first_party= "occupation"
known_third_party= "django"
line_length= 79
multi_line_output= 5
not_skip= "__init__.py"
