[tool.poetry]
name = "django-occupation"
version = "0.1.0"
description = "Multitenancy support in django, via Row Level Security."
authors = ["Matthew Schinckel <matt@schinckel.net>"]
license = "BSD"
packages = [
  { include = "occupation", from = "src" },
]

[tool.poetry.dependencies]
python = ">3.9"
Django = "*"
psycopg2-binary = "*"
pytz = "*"
pytest-django = "*"

[tool.poetry.dev-dependencies]
hypothesis = "*"
flake8 = "*"
mypy = "*"
coverage = "*"
django_coverage_plugin = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E501,E128"
max-line-length=119
banned-modules = """
  six.moves.parse = use urllib.parse.urlparse
  mock = use unittest.mock
  six = use Python3 idioms
  django.utils.six = use Python3 idioms
  django.conf.urls.url = use django.urls.path or django.urls.re_path
  django.utils.translation.ugettext = use gettext instead of ugettext
  django.utils.translation.ungettext = use ngettext instead of ungettext
"""

[tool.isort]
combine_as_imports= true
include_trailing_comma= true
known_first_party= "occupation"
known_third_party= "django"
line_length= 119
multi_line_output= 3
use_parentheses = true

[tool.black]
force_exclude = "rossweb/integrations/__template__/.*"
skip-string-normalization = "1"
line-length = 119

[tool.mypy]
ignore_missing_imports = true
files = "src/occupation,tests,examples"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
DJANGO_SETTINGS_MODULE = 'tests.settings'
pythonpath = [".", "src"]

[tool.coverage.run]
plugins = [
    'django_coverage_plugin',
]

[tool.coverage.django_coverage_plugin]
template_extensions = 'html, txt, tex, email'